# MicroMet

./: .coverage  .gitignore  README.md  environment.yml  pyproject.toml
.claude/: settings.local.json
docs/: conf.py  crop_height_estimation.md  data_processing.rst  flux_processing_workflow.md  flux_workflow_summary.md  getting_started.rst  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: 1_compile_and_preprocess.ipynb  2_create_raw_data.ipynb  3_qc_data.ipynb  3a_variable_review.ipynb  3b_plot_review.ipynb  4_ameriflux.ipynb  4b_ameriflux_plots.ipynb  5_fluxqaqc.ipynb  Appending Data From Dataloggers.ipynb  DL.ipynb  DL_testing.ipynb  DL_v2.ipynb  Dugout_Comparison.ipynb  PRISM_myton_celsius.csv  PRISM_myton_celsius_2025.csv  Pull DB Data and Impute.ipynb  alfalfa_height.ipynb  closure_cedar.ipynb  fix_headers.ipynb  footprint_recalculation.ipynb  netrad_limits_getting_started.ipynb  step4_ameriflux.ipynb  step5_fluxqaqc.ipynb  us_utv_alfalfa_height_exp_gdd.csv
docs/notebooks/auxilary_notebooks/: Pull DB Data and Impute.ipynb  alfalfa_height.ipynb  create_camera_time_lapse.ipynb  crop_height_example_alfalfa.ipynb  crop_height_example_corn.ipynb  cs_files.ipynb  footprint_recalculation.ipynb  (+3 more)
docs/test_apidoc/: micromet.format.rst  micromet.format.transformers.rst  micromet.qaqc.rst  micromet.report.rst  micromet.rst  modules.rst
src/micromet/: __init__.py  add_header_from_peer.py  converter.py  file_compile.py  headers.py  netrad_limits.py  pipeline.py  reader.py  reformatter_vars.py  station_data_pull.py  tools.py  utils.py  workflow.py
tests_micromet/: test_conf.py  test_data_cleaning.py  test_eddy_plots.py  test_file_compile.py  test_gap_summary.py  test_graphs.py  test_netrad_limits.py  test_pipeline.py  test_reformatter.py  test_timestamp_update.py  test_tools.py  test_validate.py  test_workflow.py  test_writers.py
(+47 files in other folders)
