[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "micromet"
description = "A comprehensive Python package for micrometeorological data analysis"
readme = "README.md"
version = "0.5.0"
requires-python = ">=3.11"
license = {text = "GNU General Public License v3.0"}
authors = [
    {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"},
    {name = "Kathryn Ladig", email = "kladig@utah.gov"},
    {name = "Diane Menuz", email = "dmenuz@utah.gov"}
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "plotly>=5.0",
    "sqlalchemy>=1.4",
    "pyyaml>=5.4",
    "requests>=2.25",
    "pytz>=2021.1",
    "statsmodels",
    "scikit-learn",
    "windrose",
    "tzdata",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.12",
    "myst-parser>=0.15",
    "nbsphinx>=0.8",
    "ipykernel>=6.0",
    "geopandas>=1.0.1",
    "prettytable>=3.10.0",
    "fluxdataqaqc>= 0.2.2",
    "seaborn>= 0.13.2",
    "pillow>=10.4.0",
    "imageio>=2.37.0",
    "rasterio>=1.4.1",
    "pyproj>= 3.7.0",
    "ipython>=8.28.0",
    "rioxarray>=0.17.0",
    "bokeh>=3.5.2",
    "yaml>=0.2.5",
    "pygridmet",
    "opencv",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

jupyter = [
    "notebook",
    "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ['micromet']
include-package-data = true

[tool.setuptools.package-data]
"micromet" = ["data/*.csv","data/*.yml"]

[project.urls]
"Homepage" = "https://github.com/inkenbrandt/micromet"
"Documentation" = "https://micromet.readthedocs.io/en/stable/"
